Fix : menu backoffice. When page name is too long, cut it.

--- a/web/less/style.less
+++ b/web/less/style.less
@@ -120,7 +120,10 @@ li {
         color: @body-background;
         div {
           .menu-link-pos;
-          height: 38px;
+          min-height: 38px !important;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
 
         &:hover {
